# robotscan_calibration

./: .gitignore  .gitmodules  2025-01-17_p_init.npy  2025-03-14_aT3s_init.npy  2025-03-14_aT3s_opt.npy  2025-03-14_p_init.npy  6DoF_vs_newkin.py  aT3s_init.npy  aT3s_opt.npy  aT3s_opt_16w.npy  aT3s_opt_603.npy  calib_aT3_init.py  calib_aT3_opt.py  evaluate_pose_error.py  handeye_6DoF.py  handeye_newkin.py  p_init.npy  pc_registration.py  readme.md
calib_aT3_data/2025-01-15_data_nachi/: group1.txt  group2.txt  group3.txt  group4.txt
calib_aT3_data/2025-01-15_data_ndi/: group3.txt  group5.txt
calib_aT3_data/2025-02-19_data_nachi/: group1.txt  group3.txt  group5.txt  group6.txt
calib_aT3_data/2025-02-19_data_ndi/: group4.txt  group5.txt  group6.txt
calib_aT3_data/2025-02-24_data_nachi/: group5.txt  group6.txt
calib_aT3_data/2025-02-24_data_ndi/: group1.txt
calib_aT3_data/data_leika/: group1.csv  group2.csv  group3.csv  group4.csv  group5.csv  group6.csv
cxx/: 6DoF_vs_newkin.cpp  CMakeLists.txt  handeye.json  handeye_6DoF.cpp  handeye_newkin.cpp
cxx/deprecated/: 6DoF_vs_newkin.cpp  evaluate.json  handeye.json  handeye_6DoF.cpp  handeye_newkin.cpp
cxx/include/: 6DoF_vs_newkin.hpp  RobotSerial.hpp  calibration_utils.hpp  handeye_6DoF.hpp  handeye_newkin.hpp  image_utils.hpp  json.hpp  json_utils.hpp
cxx/src/: 6DoF_vs_newkin.cpp  RobotSerial.cpp  calibration_utils.cpp  handeye_6DoF.cpp  handeye_newkin.cpp  image_utils.cpp  json_utils.cpp  roboscan_calib.cpp
kinematics_data/: data_nachi.txt
pc_registration/: 2025-03-14_robot_data.txt
(+67 files in other folders)
